# nova

./: .gitignore  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  SETUP.md  TESTING.md  TODO.md  config.example.toml  ood.md  package-lock.json  package.json
.github/workflows/: ci.yml
.wwebjs_cache/: 2.3000.1033759004.html  2.3000.1033775652.html
__test__/agent/: chain-of-thought.test.ts  reasoning-engine.test.ts  tool-selector.test.ts
__test__/gateway/: chat-speed.test.ts  research-orchestrator.test.ts
__test__/runtime/: heartbeat.test.ts  markdown-memory.test.ts  planner-smart.test.ts  research-coordinator.test.ts  research-lane-planner.test.ts  research-session-store.test.ts  scheduler.test.ts  skill-loader.test.ts  soul.test.ts  task-retry.test.ts  task-store.test.ts  (+1 more)
agent/: package.json
cli/: README.md  package.json  tsconfig.json
core/: Cargo.toml
core/examples/: simple.rs
core/src/: lib.rs
core/src/executor/: mod.rs
core/src/memory/: mod.rs
core/src/planner/: mod.rs
core/src/security/: mod.rs
core/src/tools/: mod.rs
docs/: how-nova-works.md  release-checklist.md  user-guide.md
examples/: agent-example.ts  autonomous-demo.ts  browser-demo.ts  end-to-end-demo.ts  memory-demo.ts  multi-agent-demo.ts  reminders-demo.ts  runtime-example.ts
frontend/: index.html
gateway/: package.json  tsconfig.json
runtime/: package-lock.json  package.json  tsconfig.json
scripts/: benchmark-chat.ts  benchmark-prompts.json  benchmark-prompts.quick.json  check-secrets.sh  sync-version.js  test-cli.sh  use-local.sh  use-npm.sh  view-memory.sh
(+195 files in other folders)
